--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -199,37 +199,46 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03771">https://arxiv.org/abs/2005.03771</a></span> Quantum field theory with the generalized uncertainty principle I: scalar electrodynamics</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03772">https://arxiv.org/abs/2005.03772</a></span> Quantum field theory with the generalized uncertainty principle II: Quantum Electrodynamics</p><br>
 <p class="p1">20200513</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05352">https://arxiv.org/abs/2005.05352</a></span> Aharonov-Bohm oscillations in twisted bilayer graphene<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05343">https://arxiv.org/abs/2005.05343</a></span> Intrinsic Sign Problems in Topological Quantum Field Theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05352">https://arxiv.org/abs/2005.05352</a></span> Aharonov-Bohm oscillations in twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05343">https://arxiv.org/abs/2005.05343</a></span> Intrinsic Sign Problems in Topological Quantum Field Theories</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05362">https://arxiv.org/abs/2005.05362</a></span> A minimal model for fast scrambling *** (Brian Swingle)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04548">https://arxiv.org/abs/2005.04548</a></span> Stability of the Spectral Gap for Lattice Fermions<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05621">https://arxiv.org/abs/2005.05621</a></span> Kibble-Zurek mechanism in a Dissipative Transverse Ising Chain<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05373">https://arxiv.org/abs/2005.05373</a></span> Density-Wave States in Twisted Double-Bilayer Graphene<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.04548">https://arxiv.org/abs/2005.04548</a></span> Stability of the Spectral Gap for Lattice Fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05621">https://arxiv.org/abs/2005.05621</a></span> Kibble-Zurek mechanism in a Dissipative Transverse Ising Chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05373">https://arxiv.org/abs/2005.05373</a></span> Density-Wave States in Twisted Double-Bilayer Graphene</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05685">https://arxiv.org/abs/2005.05685</a></span> Index theorem on chiral Landau bands for topological fermions **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05566">https://arxiv.org/abs/2005.05566</a></span> Intrinsic sign problem in fermionic and bosonic chiral topological matter<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05932">https://arxiv.org/abs/2005.05932</a></span> Phase diagram and mechanism of superconductivity in a strongly correlated electron system<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05566">https://arxiv.org/abs/2005.05566</a></span> Intrinsic sign problem in fermionic and bosonic chiral topological matter</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05932">https://arxiv.org/abs/2005.05932</a></span> Phase diagram and mechanism of superconductivity in a strongly correlated electron system</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03617">https://arxiv.org/abs/2004.03617</a></span> Strongly coupled quantum phonon fluid in a solvable model *** (Erez Berg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.00454">https://arxiv.org/abs/1911.00454</a></span> Supersymmetric Dirac-Hamiltonians in (1 + 1) dimensions revisited **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.06341">https://arxiv.org/abs/1910.06341</a></span> Statistical localization: from strong fragmentation to strong edge modes ** (Frank Pollmann)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.11619">https://arxiv.org/abs/1909.11619</a></span> Quantum exceptional points of non-Hermitian Hamiltonians and Liouvillians: The effects of quantum jumps<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.11619">https://arxiv.org/abs/1909.11619</a></span> Quantum exceptional points of non-Hermitian Hamiltonians and Liouvillians: The effects of quantum jumps</p>
 <p class="p2"><br></p>
 <p class="p1">20200514</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06218">https://arxiv.org/abs/2005.06218</a></span> Hofstadter butterfly and the quantum Hall effect in twisted double bilayer graphenes *** (Pilkyung Moon)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05983">https://arxiv.org/abs/2005.05983</a></span> Geometric Approach to 3D Interfaces at Strong Coupling<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05987">https://arxiv.org/abs/2005.05987</a></span> Pauli limited d-wave superconductors: Quantum breached pair phase and thermal transitions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05983">https://arxiv.org/abs/2005.05983</a></span> Geometric Approach to 3D Interfaces at Strong Coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05987">https://arxiv.org/abs/2005.05987</a></span> Pauli limited d-wave superconductors: Quantum breached pair phase and thermal transitions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06374">https://arxiv.org/abs/2005.06374</a></span> Deterministic quantum mechanics: the mathematical equations *** (Gerard ’t Hooft)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.05071">https://arxiv.org/abs/1904.05071</a></span> Non-Lorentzian RG flows and Supersymmetry<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01231">https://arxiv.org/abs/2005.01231</a></span> TOWARDS FIELD THEORY OF TURBULENCE<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1904.05071">https://arxiv.org/abs/1904.05071</a></span> Non-Lorentzian RG flows and Supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.01231">https://arxiv.org/abs/2005.01231</a></span> TOWARDS FIELD THEORY OF TURBULENCE</p>
 <p class="p2"><br></p>
 <p class="p1">20200515</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06481">https://arxiv.org/abs/2005.06481</a></span> Unconventional critical exponents at dynamical quantum phase transitions in a random Ising chain<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06759">https://arxiv.org/abs/2005.06759</a></span> A non-iterative method for the vertex corrections of the Kubo formula for electric conductivity<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06589">https://arxiv.org/abs/2005.06589</a></span> Quantum chaos in a system with high degree of symmetries<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06896">https://arxiv.org/abs/2005.06896</a></span> Impurity-induced resonant spinon zero modes in Dirac quantum spin-liquids<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06501">https://arxiv.org/abs/2005.06501</a></span> An Operational Definition of Topological Order<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06481">https://arxiv.org/abs/2005.06481</a></span> Unconventional critical exponents at dynamical quantum phase transitions in a random Ising chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06759">https://arxiv.org/abs/2005.06759</a></span> A non-iterative method for the vertex corrections of the Kubo formula for electric conductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06589">https://arxiv.org/abs/2005.06589</a></span> Quantum chaos in a system with high degree of symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06896">https://arxiv.org/abs/2005.06896</a></span> Impurity-induced resonant spinon zero modes in Dirac quantum spin-liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06501">https://arxiv.org/abs/2005.06501</a></span> An Operational Definition of Topological Order</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06572">https://arxiv.org/abs/2005.06572</a></span> Computing classification of interacting fermionic symmetry-protected topological phases using topological invariants ** (Yang Qi)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06729">https://arxiv.org/abs/2005.06729</a></span> DMFT reveals the non-Hermitian topology in heavy-fermion systems ** (Yang Qi, Hiroki Isobe, Liang Fu)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.11662">https://arxiv.org/abs/1906.11662</a></span> A generalized boundary condition applied to Lieb-Schultz-Mattis type ingappabilities and many-body Chern numbers (Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.11662">https://arxiv.org/abs/1906.11662</a></span> A generalized boundary condition applied to Lieb-Schultz-Mattis type ingappabilities and many-body Chern numbers (Masaki Oshikawa)</p><br>
+<p class="p1">20200518</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07635">https://arxiv.org/abs/2005.07635</a></span> Magnetic Skyrmions in Condensed Matter Physics **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07640">https://arxiv.org/abs/2005.07640</a></span> Optical lattice platform for the SYK model ** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07485">https://arxiv.org/abs/2005.07485</a></span> Superfluid Vortices in Four Spatial Dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07337">https://arxiv.org/abs/2005.07337</a></span> Fractionalized conductivity at topological phase transitions ***** (Meng Cheng, Willian Witczak-Krempa, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07315">https://arxiv.org/abs/2005.07315</a></span> Exotic Superconducting States in FeSe-based Materials *** (Takasada Shibauchi, Yuji Matsuda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07558">https://arxiv.org/abs/2005.07558</a></span> Bound on quantum scrambling with all-to-all interactions *** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07205">https://arxiv.org/abs/2005.07205</a></span> Quantum Phase Transition in the Yukawa-SYK Model ****** (Yuxuan Wang, Andrey Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.06262">https://arxiv.org/abs/1911.06262</a></span> Current-driven tricritical point in large-Nc gauge theory</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
