--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -238,7 +238,55 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07315">https://arxiv.org/abs/2005.07315</a></span> Exotic Superconducting States in FeSe-based Materials *** (Takasada Shibauchi, Yuji Matsuda)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07558">https://arxiv.org/abs/2005.07558</a></span> Bound on quantum scrambling with all-to-all interactions *** (Andrew Lucas)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07205">https://arxiv.org/abs/2005.07205</a></span> Quantum Phase Transition in the Yukawa-SYK Model ****** (Yuxuan Wang, Andrey Chubukov)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.06262">https://arxiv.org/abs/1911.06262</a></span> Current-driven tricritical point in large-Nc gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.06262">https://arxiv.org/abs/1911.06262</a></span> Current-driven tricritical point in large-Nc gauge theory</p><br>
+<p class="p1">20200519</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07863">https://arxiv.org/abs/2005.07863</a></span> The O(N) model with φ6 potential in R2 × R+</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07708">https://arxiv.org/abs/2005.07708</a></span> Two-dimensional O(n) models and logarithmic CFTs</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07749">https://arxiv.org/abs/2005.07749</a></span> Spin density wave and electron nematicity in magic-angle twisted bilayer graphene **</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.08737">https://arxiv.org/abs/2005.08737</a><span class="s2"> Heat kernel and path integrals ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.12291">https://arxiv.org/abs/1912.12291</a></span> A model of quantum gravity with emergent spacetime ****** (Sung-Suk Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.07205">https://arxiv.org/abs/2005.07205</a></span> Quantum Phase Transition in the Yukawa-SYK Model ****** (Yuxuan Wang, Andrey Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.08883">https://arxiv.org/abs/2005.08883</a></span> Characterising quantum correlations of fixed dimension</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.05362">https://arxiv.org/abs/2005.05362</a></span> A minimal model for fast scrambling ** (Brian Swingle)</p>
+<p class="p3"><br></p>
+<p class="p1">20200520</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.08970">https://arxiv.org/abs/2005.08970</a></span> Tunable Fragile Topology in Floquet Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.08973">https://arxiv.org/abs/2005.08973</a></span> Critical theory of non-Fermi liquid fixed point in multipolar Kondo problem ***** (Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09029">https://arxiv.org/abs/2005.09029</a></span> Tc and Pauli limited critical field of Sr2RuO4: uniaxial strain dependence ** (Sri Raghu, Kun Yang)</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.06547">https://arxiv.org/abs/2005.06547</a><span class="s2"> Topology and axions in QCD</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.09559">https://arxiv.org/abs/1910.09559</a></span> Developing local RG: quantum RG and BFSS</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1908.10291">https://arxiv.org/abs/1908.10291</a></span> Relativistic Massless Solitons in 3 + 1 Dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09404">https://arxiv.org/abs/2005.09404</a></span> Construction and examples of higher gauge theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09335">https://arxiv.org/abs/2005.09335</a></span> String Theory, Loop Quantum Gravity and Eternalism</p>
+<p class="p3"><br></p>
+<p class="p1">20200521</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09659">https://arxiv.org/abs/2005.09659</a></span> Wannier band transitions in disordered π-flux ladders *** (Taylor Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09694">https://arxiv.org/abs/2005.09694</a></span> Transport properties of strongly coupled electron-phonon liquids *** (Jorg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09673">https://arxiv.org/abs/2005.09673</a></span> Quantum Monte Carlo Simulations of the 2D Su-Schrieffer-Heeger Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.09668">https://arxiv.org/abs/2005.09668</a></span> Protection of parity-time symmetry in topological many-body systems: non-Hermitian toric code and fracton models ** (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10112">https://arxiv.org/abs/2005.10112</a></span> A renormalization group approach to non-Hermitian topological quantum criticality *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10184">https://arxiv.org/abs/2005.10184</a></span> Multicritical deconfined quantum-criticality and Lifshitz point of a helical valence-bond phase ** (Anders Sandvik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10241">https://arxiv.org/abs/2005.10241</a></span> Physics 198-730B: Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10474">https://arxiv.org/abs/2005.10474</a></span> The Non-Hermitian quantum mechanics and its canonical structure</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10065">https://arxiv.org/abs/2005.10065</a></span> Are the notions of past, present and future compatible with the General Theory of Relativity?</p>
+<p class="p3"><br></p>
+<p class="p1">20200522</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10254">https://arxiv.org/abs/2005.10254</a></span> Quantum Geometry and Stability of Moir ́e Flatband Ferromagnetism (Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10387">https://arxiv.org/abs/2005.10387</a></span> Phase transitions in a holographic multi-Weyl semimetal ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10758">https://arxiv.org/abs/2005.10758</a></span> Casimir effect for lattice fermions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10620">https://arxiv.org/abs/2005.10620</a></span> Landau Levels as a Probe for Band Topology in Graphene Moir ́e Superlattices ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10249">https://arxiv.org/abs/2005.10249</a></span> Robustness of gauge-invariant dynamics in ultracold-atom gauge theories **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10827">https://arxiv.org/abs/2005.10827</a></span> The fate of O(N) multi-critical universal behaviour **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10271">https://arxiv.org/abs/2005.10271</a></span> Toward scalable simulations of Lattice Gauge Theories on quantum computers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10412">https://arxiv.org/abs/2005.10412</a></span> Holographic RG and Exact RG in O(N) Model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10814">https://arxiv.org/abs/2005.10814</a></span> Information scrambling at finite temperature in local quantum systems *** Brian Swingle</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10273">https://arxiv.org/abs/2005.10273</a></span> Einstein-de Haas Effect of Topological Magnons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10265">https://arxiv.org/abs/2005.10265</a></span> Crystalline gauge fields and discrete geometric response for Abelian topological phases with lattice symmetry ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10257">https://arxiv.org/abs/2005.10257</a></span> Lieb Robinson bounds and out of time order correlators in a long range spin chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10278">https://arxiv.org/abs/2005.10278</a></span> Kondo breakdown in a spin-1/2 chain of adatoms on a Dirac semimetal *** Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10380">https://arxiv.org/abs/2005.10380</a></span> Phase diagram of an interacting staggered Su-Schrieffer-Heeger two-chain ladder close to a quantum critical point ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10826">https://arxiv.org/abs/2005.10826</a></span> An Effective Field Theory for Fractional Quantum Hall Systems near ν = 5/2 *** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10478">https://arxiv.org/abs/2005.10478</a></span> Influence of superconductivity on the magnetic moment of quantum impurity embedded in BCS superconductor</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
