--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -286,7 +286,16 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10278">https://arxiv.org/abs/2005.10278</a></span> Kondo breakdown in a spin-1/2 chain of adatoms on a Dirac semimetal *** Tarun Grover)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10380">https://arxiv.org/abs/2005.10380</a></span> Phase diagram of an interacting staggered Su-Schrieffer-Heeger two-chain ladder close to a quantum critical point ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10826">https://arxiv.org/abs/2005.10826</a></span> An Effective Field Theory for Fractional Quantum Hall Systems near ν = 5/2 *** (Juven Wang)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10478">https://arxiv.org/abs/2005.10478</a></span> Influence of superconductivity on the magnetic moment of quantum impurity embedded in BCS superconductor</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10478">https://arxiv.org/abs/2005.10478</a></span> Influence of superconductivity on the magnetic moment of quantum impurity embedded in BCS superconductor</p><br>
+<p class="p1">20200525</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10886">https://arxiv.org/abs/2005.10886</a></span> Static and dynamic properties of a few spin 1/2 interacting fermions trapped in an harmonic potential **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10978">https://arxiv.org/abs/2005.10978</a></span> Non-Abelian Generalizations of the Hofstadter model: Spin-orbit-coupled Butterfly Pairs **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10835">https://arxiv.org/abs/2005.10835</a></span> Non-equilibrium steady state phases of the interacting Aubry-Andre-Harper model **** (Junhyun Lee, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11314">https://arxiv.org/abs/2005.11314</a></span> Boundary RG Flows for Fermions and the Mod 2 Anomaly ***** (David Tong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10980">https://arxiv.org/abs/2005.10980</a></span> Construction of Variational Matrix Product States for the Heisenberg Spin-1 Chain *** (Jung Hoon Han, Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11133">https://arxiv.org/abs/2005.11133</a></span> Quantum tricriticality of incommensurate phase induced by quantum domain walls in frustrated Ising magnetism **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11276">https://arxiv.org/abs/2005.11276</a></span> Characterizing the Nonequilibrium Dynamics of Field-Driven Correlated Quantum Systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10943">https://arxiv.org/abs/2005.10943</a></span> Chapter 9: The ‘emergence’ of spacetime in string theory</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
