--- a/arxiv/2020_05_arxiv.html
+++ b/arxiv/2020_05_arxiv.html
@@ -295,7 +295,63 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10980">https://arxiv.org/abs/2005.10980</a></span> Construction of Variational Matrix Product States for the Heisenberg Spin-1 Chain *** (Jung Hoon Han, Hyun-Yong Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11133">https://arxiv.org/abs/2005.11133</a></span> Quantum tricriticality of incommensurate phase induced by quantum domain walls in frustrated Ising magnetism **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11276">https://arxiv.org/abs/2005.11276</a></span> Characterizing the Nonequilibrium Dynamics of Field-Driven Correlated Quantum Systems **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10943">https://arxiv.org/abs/2005.10943</a></span> Chapter 9: The ‘emergence’ of spacetime in string theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10943">https://arxiv.org/abs/2005.10943</a></span> Chapter 9: The ‘emergence’ of spacetime in string theory</p><br>
+<p class="p1">20200526</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10900">https://arxiv.org/abs/2005.10900</a></span> Masslesslike minimal subtraction for massive scalar field theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11804">https://arxiv.org/abs/2005.11804</a></span> Emergent geometry and path integral optimization for a Lifshitz action</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11514">https://arxiv.org/abs/2005.11514</a></span> Analog hep-th, on Dirac materials and in general</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.04506">https://arxiv.org/abs/1911.04506</a></span> Unraveling the nature of universal dynamics in O(N) theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1701.00775">https://arxiv.org/abs/1701.00775</a></span> HOMOTOPY CLASSES OF GAUGE FIELDS AND THE LATTICE ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1702.01738">https://arxiv.org/abs/1702.01738</a></span> Supersymmetric SYK model and random matrix theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1908.00995">https://arxiv.org/abs/1908.00995</a></span> Supersymmetry in the nonsupersymmetric Sachdev-Ye-Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02208">https://arxiv.org/abs/2001.02208</a></span> Ground state wave functions for the quantum Hall effect on a sphere and the Atiyah-Singer index theorem</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.05295">https://arxiv.org/abs/2004.05295</a></span> Quiver Gauge Theories: Beyond Reflexivity</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.11870">https://arxiv.org/abs/2005.11870</a><span class="s2"> SPOOKY ACTION AT A DISTANCE</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.14669">https://arxiv.org/abs/2004.14669</a></span> Kosterlitz-Thouless phase and Zd topological quantum phase **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.03138">https://arxiv.org/abs/2005.03138</a></span> Condensed Matter Physics in Time Crystals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11958">https://arxiv.org/abs/2005.11958</a></span> The Concept of Fact in German Physics around 1900: A Comparison between Mach and Einstein</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11393">https://arxiv.org/abs/2005.11393</a></span> Demystifying the Lagrangian formalism for field theories</p>
+<p class="p3"><br></p>
+<p class="p1">20200527</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12809">https://arxiv.org/abs/2005.12809</a></span> Fock space localization in the Sachdev-Ye-Kitaev model *** (Alexander Altland)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12291">https://arxiv.org/abs/2005.12291</a></span> Chiral Dirac Superconductors: Second-order and Boundary-obstructed Topology *** (Apoorv Tiwari, Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12608">https://arxiv.org/abs/2005.12608</a></span> Systematic construction of square-root topological insulators and superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12629">https://arxiv.org/abs/2005.12629</a></span> Effective Seiberg-Witten gauge theory of noncollinear magnetism ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12313">https://arxiv.org/abs/2005.12313</a></span> Lack of a genuine time crystal in a chiral soliton model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11241">https://arxiv.org/abs/2005.11241</a></span> Generic anisotropic Lifshitz scalar field theory: masslesslike massive minimal subtraction **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.11750">https://arxiv.org/abs/2005.11750</a></span> :THE COSMOLOGICAL OTOC: Formulating new cosmological micro-canonical correlation functions for random chaotic fluctuations in Out-of-Equilibrium Quantum Statistical Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12285">https://arxiv.org/abs/2005.12285</a></span> Exploring Strongly Interacting Gapless States: Cuprates, Pair Density Waves, and Fluctuating Superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12381">https://arxiv.org/abs/2005.12381</a></span> Magnetic order and transport in a spin-fermion model on a superlattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12399">https://arxiv.org/abs/2005.12399</a></span> Dynamical signatures of quasiparticle interactions in quantum spin chains *** (Leon Balents, Oleg Starykh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12825">https://arxiv.org/abs/2005.12825</a></span> Constructive approach for frustration-free models using Witten’s conjugation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12317">https://arxiv.org/abs/2005.12317</a></span> Fracton-elasticity duality of two-dimensional superfluid vortex crystals: defect interactions and quantum melting</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.12728">https://arxiv.org/abs/2005.12728</a><span class="s2"> Chapter 7: Duality **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.11277">https://arxiv.org/abs/1910.11277</a></span> Global anomalies in the Standard Model(s) and Beyond</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12866">https://arxiv.org/abs/2005.12866</a></span> Background magnetic field and quantum correlations in the Schwinger effect</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.12296">https://arxiv.org/abs/2005.12296</a><span class="s2"> Higher-Form Symmetries in 5d</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12693">https://arxiv.org/abs/2005.12693</a></span> The Casimir energy in terms of boundary quantum field theory: the QED case ***</p>
+<p class="p3"><br></p>
+<p class="p1">20200528</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13507">https://arxiv.org/abs/2005.13507</a></span> Unconventional Majorana fermions on the surface of topological superconductors protected by rotational symmetry ****** (Junyeong Ahn, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12975">https://arxiv.org/abs/2005.12975</a></span> Weyl Anomaly induced Fermi Condensation and Holography</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12924">https://arxiv.org/abs/2005.12924</a></span> Gapped Goldstones at the cut-off scale: a non-relativistic EFT</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12925">https://arxiv.org/abs/2005.12925</a></span> Electrical detection of spin liquids in double moiré layers *** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.12961">https://arxiv.org/abs/2005.12961</a></span> Superconductivity in a doped valley coherent insulator in magic angle graphene: Goldstone-mediated pairing and Kohn-Luttinger mechanism ** (Michael Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13136">https://arxiv.org/abs/2005.13136</a></span> Modified MIT Bag Models: Thermodynamical consistency, stability windows and symmetry group **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.05987">https://arxiv.org/abs/2001.05987</a></span> Complex poles and spectral functions of Landau gauge QCD and QCD-like theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.03494">https://arxiv.org/abs/1911.03494</a></span> Spontaneous symmetry breaking in pure 2D Yang-Mills theory **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.06983">https://arxiv.org/abs/2005.06983</a></span> EFT anomalous dimensions from the S-matrix</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.08973">https://arxiv.org/abs/2005.08973</a></span> Critical theory of non-Fermi liquid fixed point in multipolar Kondo problem *** (Yong Baek Kim)</p>
+<p class="p3"><br></p>
+<p class="p1">20200529</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13545">https://arxiv.org/abs/2005.13545</a></span> Theory of the fractional quantum Hall effect in Weyl semimetals *** (A. A. Burkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13683">https://arxiv.org/abs/2005.13683</a></span> Microscopic Models for Kitaev’s Sixteenfold Way of Anyon Theories *** (Matthias Vojta, Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13772">https://arxiv.org/abs/2005.13772</a></span> Observation of E8 Particles in an Ising Chain Antiferromagnet **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13836">https://arxiv.org/abs/2005.13836</a></span> Observation of a gapless spin liquid in a diluted Kitaev honeycomb material ** (Seung-Ho Baek, Kwang-Yong Choi, Lukas Janssen, Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14178">https://arxiv.org/abs/2005.14178</a></span> Algebraic higher symmetry and categorical symmetry – a holographic and entanglement view of symmetry ***** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04821">https://arxiv.org/abs/1909.04821</a></span> Real Time Dynamics and Confinement in the Zn Schwinger- Weyl lattice model for 1+1 QED</p>
+<p class="p2"><a href="https://arxiv.org/abs/2005.12296">https://arxiv.org/abs/2005.12296</a><span class="s2"> Higher-Form Symmetries in 5d</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.13975">https://arxiv.org/abs/2005.13975</a></span> ASPECTS OF ENTANGLEMENT ENTROPY IN ALGEBRAIC QUANTUM FIELD THEORY</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
