--- a/arxiv/2020_06_arxiv.html
+++ b/arxiv/2020_06_arxiv.html
@@ -126,6 +126,14 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20200601</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14228">https://arxiv.org/abs/2005.14228</a></span> Machine Learning for Condensed Matter Physics *** (review article)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14239">https://arxiv.org/abs/2005.14239</a></span> Semiclassical Theory of Thermal Resistivity in Metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14293">https://arxiv.org/abs/2005.14293</a></span> High-harmonic generation in spin-orbit coupled systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14243">https://arxiv.org/abs/2005.14243</a></span> Entanglement of Local Operators and the Butterfly Effect **** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14500">https://arxiv.org/abs/2005.14500</a></span> Topological second-order spin-3/2 liquids with hinge Fermi arcs ** (Shengyuan A. Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14622">https://arxiv.org/abs/2005.14622</a></span> Free fermionic and parafermionic quantum spin chains with multispin interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14329">https://arxiv.org/abs/2005.14329</a></span> Quantum Confinement Induced Metal-Insulator Transition in Strongly Correlated Quantum Wells of SrVO3 Superlattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.14710">https://arxiv.org/abs/2005.14710</a></span> Quasi-One-Dimensional Higher-Order Topological Insulators ** (Hongki Min)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
